--- a/PromptHub.Web/Components/Layout/NavMenu.razor
+++ b/PromptHub.Web/Components/Layout/NavMenu.razor
@@ -1,7 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">PromptHub.Web</a>
-        <LoginDisplay />
+        <a class="navbar-brand" href="">PromptHub</a>
     </div>
 </div>
 
