Initial MyPrompts page

--- a/PromptHub.Web/Components/App.razor
+++ b/PromptHub.Web/Components/App.razor
@@ -15,6 +15,9 @@
 
 <body>
     <CascadingAuthenticationState>
+        <MudThemeProvider />
+        <MudDialogProvider />
+        <MudSnackbarProvider />
         <Routes />
     </CascadingAuthenticationState>
     <script src="_framework/blazor.web.js"></script>
