--- a/PromptHub.Web/Components/Layout/NavMenu.razor
+++ b/PromptHub.Web/Components/Layout/NavMenu.razor
@@ -31,6 +31,12 @@
                 <span class="bi bi-person-circle" aria-hidden="true"></span> Profile
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="my-prompts">
+                <span class="bi bi-card-text" aria-hidden="true"></span> My prompts
+            </NavLink>
+        </div>
     </nav>
 </div>
 
