--- a/PromptHub.Web/Components/App.razor
+++ b/PromptHub.Web/Components/App.razor
@@ -22,10 +22,7 @@
 
 <body>
     <CascadingAuthenticationState>
-        <MudThemeProvider />
-        <MudDialogProvider />
-        <MudSnackbarProvider />
-        <Routes />
+        <Routes @rendermode="InteractiveServer" />
     </CascadingAuthenticationState>
     <script src="_framework/blazor.web.js"></script>
 </body>
