--- a/PromptHub.Web/Components/Pages/Home.razor
+++ b/PromptHub.Web/Components/Pages/Home.razor
@@ -1,7 +1,10 @@
 ﻿@page "/"
+@rendermode InteractiveServer
 
-<PageTitle>Home</PageTitle>
+@inject NavigationManager Navigation
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+@code
+{
+    protected override void OnInitialized()
+        => this.Navigation.NavigateTo("/my-prompts", replace: true);
+}
