--- a/PromptHub.Web/Components/Layout/NavMenu.razor
+++ b/PromptHub.Web/Components/Layout/NavMenu.razor
@@ -9,34 +9,18 @@
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="nav flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+            <NavLink class="nav-link" href="my-prompts">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> My prompts
             </NavLink>
         </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-
+        
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="profile">
                 <span class="bi bi-person-circle" aria-hidden="true"></span> Profile
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="my-prompts">
-                <span class="bi bi-card-text" aria-hidden="true"></span> My prompts
-            </NavLink>
-        </div>
+        
     </nav>
 </div>
 
