--- a/PromptHub.Web/Components/Layout/NavMenu.razor
+++ b/PromptHub.Web/Components/Layout/NavMenu.razor
@@ -1,10 +1,10 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@* <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">PromptHub</a>
     </div>
 </div>
 
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
+<input type="checkbox" title="Navigation menu" class="navbar-toggler" /> *@
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="nav flex-column">
@@ -14,13 +14,11 @@
             </NavLink>
         </div>
         
-        <div class="nav-item px-3">
+        @* <div class="nav-item px-3">
             <NavLink class="nav-link" href="profile">
                 <span class="bi bi-person-circle" aria-hidden="true"></span> Profile
             </NavLink>
-        </div>
-
-        
+        </div> *@
     </nav>
 </div>
 
