--- a/PromptHub.Web/Components/Layout/NavMenu.razor
+++ b/PromptHub.Web/Components/Layout/NavMenu.razor
@@ -13,6 +13,12 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> My prompts
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="public-prompts">
+                <span class="bi bi-collection-fill-nav-menu" aria-hidden="true"></span> Public prompts
+            </NavLink>
+        </div>
         
         @* <div class="nav-item px-3">
             <NavLink class="nav-link" href="profile">
