--- a/PromptHub.Web/Components/Pages/MyPrompts.razor
+++ b/PromptHub.Web/Components/Pages/MyPrompts.razor
@@ -34,7 +34,7 @@
             @foreach (var prompt in this.Prompts)
             {
                 <MudItem xs="12" sm="6" md="4" lg="3" @key="prompt.PromptId">
-                    <PromptCard Prompt="prompt" CurrentUserAuthorId="this.CurrentUserAuthorId" ShowEdit="true" OnEdit="this.OpenEditDialogAsync" />
+                    <PromptCard Prompt="prompt" CurrentUserAuthorId="this.CurrentUserAuthorId" ShowEdit="true" OnEdit="this.OpenEditDialogAsync" OnView="this.OpenViewDialogAsync" />
                 </MudItem>
             }
         </MudGrid>
