--- a/PromptHub.Web/Components/Prompts/PromptCard.razor
+++ b/PromptHub.Web/Components/Prompts/PromptCard.razor
@@ -7,6 +7,7 @@
             <MudText Typo="Typo.h6">@this.Prompt.Title</MudText>
         </CardHeaderContent>
         <CardHeaderActions>
+            <MudIconButton Icon="@Icons.Material.Filled.Visibility" Color="Color.Default" OnClick="this.ViewClicked" />
             @if (this.ShowEdit)
             {
                 <MudIconButton Icon="@Icons.Material.Filled.Edit" Color="Color.Default" OnClick="this.EditClicked" />
