Implementation of voting

--- a/PromptHub.Web/Components/Pages/PublicPrompts.razor
+++ b/PromptHub.Web/Components/Pages/PublicPrompts.razor
@@ -3,6 +3,7 @@
 
 @using MudBlazor
 @using PromptHub.Web.Application.Models.Prompts
+@using PromptHub.Web.Application.Models.Votes
 @using PromptHub.Web.Components.Dialogs
 @using PromptHub.Web.Components.Prompts
 
@@ -44,7 +45,7 @@
             @foreach (var prompt in this.Prompts)
             {
                 <MudItem xs="12" sm="6" md="4" lg="3" @key="prompt.PromptId">
-                    <PromptCard Prompt="prompt" ShowEdit="false" OnView="this.OpenViewDialogAsync" />
+                    <PromptCard Prompt="prompt" ShowEdit="false" ShowVoting="true" OnVote="this.HandleVoteAsync" OnView="this.OpenViewDialogAsync" />
                 </MudItem>
             }
         </MudGrid>
