--- a/PromptHub.Web/Components/Layout/LoginDisplay.razor
+++ b/PromptHub.Web/Components/Layout/LoginDisplay.razor
@@ -12,8 +12,8 @@
             Href="MicrosoftIdentity/Account/SignOut"
             Variant="Variant.Text"
             Size="Size.Medium"
-            Title="Log out" 
-            AriaLabel="Log out" />
+            title="Log out" 
+            aria-label="Log out" />
     </Authorized>
     <NotAuthorized> 
         <MudLink Href="MicrosoftIdentity/Account/SignIn" Class="navbar-text nav-link">
