--- a/PromptHub.Web/Components/Layout/MainLayout.razor
+++ b/PromptHub.Web/Components/Layout/MainLayout.razor
@@ -4,7 +4,7 @@
 
 <MudLayout>
     <MudAppBar>
-        <MudGrid Justify="Justify.FlexStart" AlignItems="AlignItems.Center" Class="d-flex align-center" Spacing="0">
+        <MudGrid Justify="Justify.FlexStart" Class="d-flex align-center" Spacing="0">
             <MudItem Class="d-flex align-center" Style="padding-right:0;">
                 <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
             </MudItem>
